--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <!-- Navigation bar -->
-    <navbar id="navbar">
+    <navbar id="navbar" role="Navigation" aria-label="Navigation menu">
       <a class="navbar-logo" href="index.html" aria-label="Link to home page">
         <img id="logo" src="./assets/logo_white.png" alt="Logo of website">
       </a>
@@ -48,18 +48,21 @@
             <img class="contact-img" src="./assets/linkedIn.png" alt="image of linkedin">
             <div class="contact-body">
               <p class="contact-text">My detailed experience and education.</p>
-              <button class="button">
-                <a href="https://www.linkedin.com/in/jiaweilyu/">LinkedIn</a>
-              </button>
+              <a class="button" href="https://www.linkedin.com/in/jiaweilyu/">LinkedIn</a>
             </div>
           </div>
           <div class="contact-item">
             <img class="contact-img" src="./assets/github.png" alt="image of github">
             <div class="contact-body">
-              <p class="contact-text">My personal repository storing some of my projects.</p>
-              <button class="button">
-                <a href="https://github.com/ljw9609">Github</a>
-              </button>
+              <p class="contact-text">Personal projects repository.</p>
+              <a class="button" href="https://github.com/ljw9609">Github</a>
+            </div>
+          </div>
+          <div class="contact-item">
+            <img class="contact-img" src="./assets/northwestern.png" alt="image of email">
+            <div class="contact-body">
+              <p class="contact-text">Or email me directly.</p>
+              <a class="button" href="mailto:jiawei.lyu@u.northwestern.edu">Email</a>
             </div>
           </div>
         </div>
