--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <!-- Navigation bar -->
-    <navbar id="navbar">
+    <navbar id="navbar" role="Navigation" aria-label="Navigation menu">
       <a class="navbar-logo" href="index.html" aria-label="Link to home page">
         <img id="logo" src="./assets/logo_white.png" alt="Logo of website">
       </a>
@@ -40,7 +40,7 @@
     <div class="dark-background screen-height" id="Experience">
       <div class="container text-center">
         <span class="section-title">Experience & Education</span>
-        <p class="section-subtitle">
+        <p class="section-subtitle" role="experience content" aria-label="Experience and education">
           <section class="tl-container" id="timeline">
           </section>
         </p>
