--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <!-- Navigation bar -->
-    <navbar id="navbar">
+    <navbar id="navbar" role="Navigation" aria-label="Navigation menu">
       <a class="navbar-logo" href="index.html" aria-label="Link to home page">
         <img id="logo" src="./assets/logo_white.png" alt="Logo of website">
       </a>
@@ -40,7 +40,7 @@
     <div class="dark-background screen-height" id="Projects">
       <div class="container text-center">
         <span class="section-title">Projects</span>
-        <p class="section-subtitle"></p>
+        <p class="section-subtitle" role="proeject content" aria-label="Projects in school"></p>
         <section id="projectList"></section>
       </div>
     </div>
